<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/img_backdrop"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:scaleType="centerInside"
        android:src="@color/colorPrimaryDark70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:scaleType="centerInside"
        android:src="@color/colorPrimaryDark70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:elevation="0dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@id/img_backdrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_backdrop"
        app:layout_constraintVertical_bias="0.71">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_baseline_photo"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_vote"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="7dp"
        android:background="@drawable/round_item_vote"
        android:elevation="10dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/cv_poster"
        app:layout_constraintTop_toTopOf="@id/cv_poster">

        <TextView
            android:id="@+id/tv_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cv_poster"
            app:layout_constraintStart_toStartOf="@id/cv_poster"
            app:layout_constraintTop_toBottomOf="@id/cv_poster"
            tools:text="99%" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_tag_line"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/cv_poster"
        app:layout_constraintStart_toStartOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/cv_poster"
        tools:text="Tag Line" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toTopOf="@+id/cv_poster"
        tools:text="title" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="Date" />

    <TextView
        android:id="@+id/tv_genre"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        tools:text="Genre" />

    <TextView
        android:id="@+id/status"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_status"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

    <TextView
        android:id="@+id/tv_status"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_status"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/number_of_episodes"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_number_of_episodes"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_status" />

    <TextView
        android:id="@+id/tv_number_of_episodes"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_number_of_episodes"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/number_of_episodes" />

    <TextView
        android:id="@+id/number_of_seasons"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_number_of_seasons"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_episodes" />

    <TextView
        android:id="@+id/tv_number_of_seasons"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_number_of_seasons"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/number_of_seasons" />

    <TextView
        android:id="@+id/budget"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_budget"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_seasons" />

    <TextView
        android:id="@+id/tv_budget"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_budget"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/budget" />

    <TextView
        android:id="@+id/revenue"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_revenue"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_budget" />

    <TextView
        android:id="@+id/tv_revenue"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_revenue"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/revenue" />

    <TextView
        android:id="@+id/overview"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/text_overview"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_backdrop" />

    <TextView
        android:id="@+id/tv_overview"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview"
        tools:text="Overview" />

    <TextView
        android:id="@+id/cast"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/text_top_billed_cast"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cast"
        tools:listitem="@layout/items_cast" />

    <TextView
        android:id="@+id/last_episode_to_air"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/text_last_episode_to_air"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_cast" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_last_episode"
        style="@style/Theme.MovieCatalogueSpacingMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="0dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_episode_to_air">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_poster_season"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_baseline_photo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name_season"
                    style="@style/Theme.MovieCatalogueSpacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/colorText"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_date_season"
                    style="@style/Theme.MovieCatalogueSpacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/colorText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_total_season"
                    style="@style/Theme.MovieCatalogueSpacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_overview_season"
                    style="@style/Theme.MovieCatalogueSpacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:maxLines="3"
                    android:textColor="@color/colorText"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>